Adjust h1 margin to stop overflowing

--- a/style.css
+++ b/style.css
@@ -55,12 +55,10 @@ header > * {
   width: 85%;
   justify-self: flex-start;
   height: 100px;
-  margin-right: auto;
-  margin-left: auto;
   font-family: 'Playfair Display', sans-serif;
   font-style: normal;
   font-weight: normal;
-  font-size: 33px;
+  font-size: 35px;
   margin-bottom: 10px;
   color: #1a2236;
   line-height: 1;
@@ -83,17 +81,17 @@ header > * {
   height: 126px;
   font-style: normal;
   font-weight: normal;
-  font-size: 17px;
+  font-size: 16px;
   font-family: 'Poppins', sans-serif;
   line-height: 25px;
   letter-spacing: -0.02em;
   color: #1a2236;
-  margin-top: 30px;
+  margin-top: 35px;
   align-self: center;
   text-align: left;
   margin-right: auto;
   margin-left: auto;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 }
 
 .headline .collaboration {
